userがリソース制限情報を持つように
