# srcs/server/api/users/[id].get.ts
@@ -30,8 +30,11 @@ export default defineEventHandler((event) => {
         name: "Bob",
         email: "sample@example.com",
         createdAt: new Date().toISOString(),
-        isAdmin: true,
+        isAdmin: false,
         lastLoginAt: new Date().toISOString(),
+        cpuLimit: 32,
+        memoryLimit: 32 * 1024 * 1024 * 1024, // 32GB
+        storageLimit: 512 * 1024 * 1024 * 1024, // 512GB
       };
     }
   }
