# srcs/server/api/users/me.get.ts
@@ -15,12 +15,15 @@ export default defineEventHandler(async (event) => {
   }
 
   const user1 = {
-    id: "a575c9ea-96fb-4ed3-9d92-d93712d0e2cc",
-    name: "Alice",
+    id: "ff09658a-6b02-4c99-bb05-cf8487411d1f",
+    name: "Bob",
     email: "sample@example.com",
     createdAt: new Date().toISOString(),
     isAdmin: false,
     lastLoginAt: new Date().toISOString(),
+    cpuLimit: 32,
+    memoryLimit: 32 * 1024 * 1024 * 1024, // 32GB
+    storageLimit: 512 * 1024 * 1024 * 1024, // 512GB
   };
   return user1;
 });
